Background canvas implemented

--- a/styles/backgroundCanvas.module.css
+++ b/styles/backgroundCanvas.module.css
@@ -1,5 +1,11 @@
 .backgroundCanvas {
-    width: 100%;
-    height: 100%;
-    background-color: #eee;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100vh;
+    min-height: 100vh;
+    background-color: #111524;
+    z-index: -1;
 }
