--- a/styles/backgroundCanvas.module.css
+++ b/styles/backgroundCanvas.module.css
@@ -4,8 +4,24 @@
     left: 0;
     right: 0;
     bottom: 0;
-    width: 100vh;
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
     background-color: #111524;
     z-index: -1;
+}
+
+.backgroundCanvasAbsolute {
+    position: static;
+    margin-bottom: 100px;
+}
+
+.spacer {
+    height: 200vh;
+    width: 100%;
+}
+
+.spacerStatic {
+    height: 100vh;
+    width: 100%;
+
 }
