Switch to react threejs fiber

--- a/styles/backgroundCanvas.module.css
+++ b/styles/backgroundCanvas.module.css
@@ -23,5 +23,14 @@
 .spacerStatic {
     height: 100vh;
     width: 100%;
+}
 
+.loading {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 20%;
 }
