--- a/src/pages/project/[...slug].astro
+++ b/src/pages/project/[...slug].astro
@@ -1,4 +1,5 @@
 ---
+import ContentLayout from '@/layouts/content-layout.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
@@ -14,5 +15,6 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<h1>{entry.data.title}</h1>
-<Content />
+<ContentLayout title={entry.data.title}>
+  <Content />
+</ContentLayout>
