--- a/src/layouts/content-layout.astro
+++ b/src/layouts/content-layout.astro
@@ -6,15 +6,24 @@ const { title } = Astro.props;
 
 <html>
   <head>
-    <title>{title}</title>
     <BaseHead />
+    <title>{title}</title>
   </head>
-  <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/project">Projects</a>
-    </nav>
-    <h1>{title}</h1>
-    <slot />
+  <body class="bg-background flex flex-col min-h-screen">
+    <div class="bg-background border flex items-center p-4">App Bar</div>
+    <div class="grow flex">
+      <nav class="flex flex-col border p-4 border-t-0 gap-4">
+        <a class="hover:underline" href="/">Home</a>
+        <a class="hover:underline" href="/project">Projects</a>
+        <a class="hover:underline" href="/project/rocket-car">Rocket Car</a>
+        <a class="hover:underline" href="/project/rocket-car/intro"
+          >Rocket Car Intro</a
+        >
+      </nav>
+      <div class="grow p-4">
+        <h1>{title}</h1>
+        <slot />
+      </div>
+    </div>
   </body>
 </html>
