--- a/src/layouts/base-head-layout.astro
+++ b/src/layouts/base-head-layout.astro
@@ -13,13 +13,16 @@ import { ViewTransitions } from 'astro:transitions';
       ) {
         return localStorage.getItem('theme');
       }
+
       return window.matchMedia('(prefers-color-scheme: dark)').matches
         ? 'dark'
         : 'light';
     };
-    const isDark = getThemePreference() === 'dark';
-    document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
-
+    function setThemeClassList(document, theme) {
+      const isDark = theme === 'dark';
+      document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
+    }
+    setThemeClassList(document, getThemePreference());
     if (typeof localStorage !== 'undefined') {
       const observer = new MutationObserver(() => {
         const isDark = document.documentElement.classList.contains('dark');
@@ -30,6 +33,9 @@ import { ViewTransitions } from 'astro:transitions';
         attributeFilter: ['class'],
       });
     }
+    document.addEventListener('astro:before-swap', (ev) => {
+      setThemeClassList(ev.newDocument, getThemePreference());
+    });
   })();
 </script>
 <meta charset="utf-8" />
