Fix eslint config

--- a/src/layouts/content-layout.astro
+++ b/src/layouts/content-layout.astro
@@ -6,7 +6,7 @@ import { NavBar } from '@/components/layouts/nav-bar';
 const { title } = Astro.props;
 ---
 
-<html>
+<html lang="en">
   <head>
     <BaseHead />
     <title>{title}</title>
